skin/sass/state.sass
.flowplayer
  &.is-poster
    .fp-engine
      opacity: 0
  &.is-splash
    .fp-ui > *
      display: none
    .fp-ui > svg.fp-play
      display: block
  &.has-title
    .fp-header
      top: 0
      text-align: right
  &.is-fullscreen
    .fp-player
      background-color: #333

  &.is-loading, &.is-seeking
    .fp-waiting
      display: block
    .fp-play
      display: none
  &.is-playing
    .fp-playbtn
      &:before
        content: "\e008"

